scrollbar fixes

--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,14 +1,16 @@
+@import url('./main.css');
 ::-webkit-scrollbar-track
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-  background-color: #F5F5F5;
-  border-radius: 10px;
+  background-color: transparent;
+  border-radius: 30px;
 }
 
 ::-webkit-scrollbar
 {
   width: 10px;
-  background-color: #F5F5F5;
+  border-radius: 30px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb
@@ -16,8 +18,8 @@
   border-radius: 10px;
   background-color: #FFF;
   background-image: -webkit-linear-gradient(top,
-                        #e4f5fc 0%,
-                        #bfe8f9 50%,
-                        #9fd8ef 51%,
-                        #2ab0ed 100%);
+                        #E9FFCF 0%,
+                        #C7FF8D 50%,
+                        #A5FF4B 51%,
+                        #83FF08 100%);
 }
